# performance-recommander

./: .gitignore  README.md  pyproject.toml
conf/: config.py  global.toml
notebooks/: EDA_performances.ipynb  EDA_performances_details.ipynb
src/data_collecting/: README.md  api_fetch.py  generate_user_data.py
src/models/collaborative/: matrix-factorization.py
src/models/content_based/: README.md  knn.py
src/models/hybrid/: lightFM.py
src/preprocessing/: README.md  transform_data.py
src/services/: README.md  kopis_client.py
src/utils/: README.md  helpers.py
